# WebTerm

./: Makefile  README.md  binding.py  client.py  find_ansi.py  index.js  output  package-lock.json  package.json  process.py  pyproject.toml  replit.nix  startProcess.js  tk_client.py
TerminalUi/: __init__.py
client/: index.html  package-lock.json  package.json  style.css  tsconfig.json
client/src/: TerminalUI.js  index.js
js-svr/: index.js  startProcess.js
server/: package-lock.json  package.json
server/src/: PTYService.js  SocketService.js  index.js
tests/: escape.ipynb
