[tool.poetry]
name = "terminal"
version = "0.1.0"
description = ""
authors = ["Andy Zhang <z-c-ge@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"
python-socketio = {extras = ["client"], version = "^5.6.0"}

[tool.poetry.dev-dependencies]
black = {version = "^22.3.0", allow-prereleases = true}
ipykernel = "^6.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint."MESSAGES CONTROL"]
disable="E0401, C0103, W1514"